Update package description

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@thavarshan/preflight-js",
-    "version": "1.4.7",
-    "description": "Convenient JavaScript library that helps with sending form data by serializing Objects to FormData instances through HTTP requests.",
+    "version": "1.4.9",
+    "description": "Simple form helpers for Vue JS.",
     "main": "dist/index.js",
     "jsnext:main": "src/index.js",
     "scripts": {
