--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
     "presets": [
-        "es2015"
+        "es2015",
+        "env"
     ],
     "plugins": [
         "transform-object-rest-spread",
