--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
     "name": "formlink",
-    "version": "1.2.2",
+    "version": "1.3.2",
     "description": "Simple form helpers for Vue JS.",
     "main": "dist/index.js",
     "jsnext:main": "src/index.js",
     "scripts": {
         "build": "rm -rf dist/* && babel src -d dist",
         "prepublish": "npm run build",
-        "format": "prettier --write \"**/*.{css,js,vue}\""
+        "format": "prettier --write \"**/*.{css,js,vue}\"",
+        "test": "jest"
     },
     "repository": {
         "type": "git",
@@ -26,10 +27,15 @@
     },
     "homepage": "https://github.com/Thavarshan/formlink#readme",
     "devDependencies": {
+        "axios-mock-adapter": "^1.19.0",
         "babel-cli": "^6.9.0",
+        "babel-core": "^6.26.3",
+        "babel-jest": "^23.6.0",
         "babel-plugin-transform-async-to-generator": "^6.16.0",
         "babel-plugin-transform-object-rest-spread": "^6.16.0",
-        "babel-preset-es2015": "^6.9.0"
+        "babel-preset-env": "^1.7.0",
+        "babel-preset-es2015": "^6.24.1",
+        "jest": "^23.0.0"
     },
     "dependencies": {
         "axios": "^0.19",
