--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "babel-plugin-transform-object-rest-spread": "^6.16.0",
         "babel-preset-env": "^1.7.0",
         "babel-preset-es2015": "^6.24.1",
+        "fsevents": "^1.2.13",
         "jest": "^23.0.0"
     },
     "dependencies": {
