--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "formlink",
-    "version": "1.5.2",
+    "version": "2.0.1",
     "description": "Simple form helpers for Vue JS.",
     "main": "dist/index.js",
     "jsnext:main": "src/index.js",
@@ -8,7 +8,7 @@
         "build": "rm -rf dist/* && babel src -d dist",
         "prepublish": "npm run build",
         "format": "prettier --write \"**/*.{css,js,vue}\"",
-        "test": "jest"
+        "test": "jest --verbose ./tests"
     },
     "repository": {
         "type": "git",
@@ -25,7 +25,7 @@
     "bugs": {
         "url": "https://github.com/Thavarshan/formlink/issues"
     },
-    "homepage": "https://github.com/Thavarshan/formlink#readme",
+    "homepage": "https://github.com/Thavarshan/formlink#README.md",
     "devDependencies": {
         "axios-mock-adapter": "^1.19.0",
         "babel-cli": "^6.9.0",
@@ -35,11 +35,11 @@
         "babel-plugin-transform-object-rest-spread": "^6.16.0",
         "babel-preset-env": "^1.7.0",
         "babel-preset-es2015": "^6.24.1",
-        "jest": "^23.0.0"
+        "jest": "^23.0.0",
+        "prettier": "^1.10.2"
     },
     "dependencies": {
-        "axios": "^0.19",
-        "object-to-formdata": "^4.1.0",
-        "prettier": "^1.10.2"
+        "axios": "^0.21",
+        "object-to-formdata": "^4.1.0"
     }
 }
