--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/Thavarshan/formlink.git"
+        "url": "git://github.com/emberfuse/formlink.git"
     },
     "keywords": [
         "vue",
